@@ -307,6 +307,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 
 * Arabic (ar)
 * Aramaic (arc)
+* Aymara (ay)
 * Belarusian (be)
 * Bulgarian (bg)
 * Breton (br)
@@ -345,6 +346,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * Sicilian (scn)
 * Slovak (sk)
 * Swedish (sv)
+* Tahitian (ty)
 * Ukrainian (uk)
 * Zealandic (zea)
 * Cantonese (zh-yue)
